fix: handle toc overflow elegently

--- a/assets/css/_partial/_single/_toc.scss
+++ b/assets/css/_partial/_single/_toc.scss
@@ -69,6 +69,9 @@
   top: 10rem;
   left: 0;
   visibility: hidden;
+  overflow: auto;
+  height: auto;
+  max-height: 80vh;
 
   [header-desktop=normal] & {
     top: 5rem;
